Refactor test organization